syntax = "proto3";

package pb;

service Command {
  rpc DoCommand (CommandRequest) returns (CommandResponse) {}
  rpc GetUsage (HelpRequest) returns (CommandResponse) {}
  rpc GetCommands (Empty) returns (CommandList) {}
}

service Log {
  rpc Log (stream LogResponse) returns (stream LogMessage) {}
}

message CommandRequest {
  string nick = 1;
  string command = 2;
  repeated string args = 3;
}

message CommandResponse {
  repeated string reply = 1;
}

message HelpRequest {
  string command = 1;
}

message Empty {}

message CommandList {
  repeated CommandEntry list = 1;
}

message CommandEntry {
  string command = 1;
  string description = 2;
}

message LogMessage {
  int64 time = 1;
  string nick = 2;
  string body = 3;
}

message LogResponse {
  string reply = 1;
}
